# ParallelSystems

./: .gitignore  CMakeLists.txt  twitter-klein.json
Debug/: MPI_TEST
src/: MPI_TEST.c  bucketSort.c  bucketSort.h  common.c  common.h  dataHolder.c  dataHolder.h  fileHandler.c  fileHandler.h  jsmn.h  time.c  time.h
